[package]
name = "snedfile"
version = "0.1.0"
authors = ["Draphar <draphar-code@protonmail.com>"]
edition = "2018"
repository = "https://github.com/Draphar/snedfile"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/snedfile"
description = "Cross-platform sendfile() abstractions"
categories = ["api-bindings", "network-programming"]
keywords = ["sendfile", "wrapper", "cross-platform", "system call"]

[dependencies]
libc = "0.2"

[dev-dependencies]
tcp-test = "=0.0.1"

[features]
default = ["fallback-bufreader", "ios-sendfile"]
fallback-bufreader = []
fallback-buf = []
ios-sendfile = []
large-files = []
